# Hello_Agents

./: .editorconfig  .env.example  .gitignore  Agents.md  README.md  demo_new_memory_tool.py  main.py  pyproject.toml  requirements.txt  skills-lock.json  test_memory_system.py  test_new_memory_tool.py
agents/: plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
core/: agent.py  config.py  exceptions.py  llm.py  message.py
data/: memories.db
docs/skills/: message_design_lessons.md
src/agents/: __init__.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
src/core/: __init__.py  agent.py  exceptions.py  llm.py  message.py
src/memory/: __init__.py  base.py  embedding.py  manager.py
src/memory/rag/: __init__.py  document.py  pipeline.py
src/memory/storage/: __init__.py  document_store.py  neo4j_store.py  qdrant_store.py
src/memory/types/: __init__.py  episodic.py  perceptual.py  semantic.py  working.py
src/tools/: __init__.py  async_executor.py  base.py  chain.py  registry.py
src/tools/builtin/: __init__.py  calculator.py  memory_tool.py  rag_tool.py  search.py
study/: my_llm.py  my_main.py  my_simple_agent.py
tests/: test_agent_patterns.py  test_basic.py  test_episodic_memory.py  test_perceptual_memory.py  test_semantic_memory.py  test_tools.py  test_working_memory.py
tools/: __init__.py  async_executor.py  base.py  chain.py  registry.py
tools/builtin/: calculator.py  search.py
